# coreops-platform

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/scripts/: c2a_synthetic_dry_run.py  c2b_readonly_dry_run.py  c2b_real_source_dry_run.py  consulting_staging_write_import.py  mvp_smoke.py  seed_booking_demo.py
backend/tests/: conftest.py  test_accounting.py  test_ai.py  test_audit.py  test_auth.py  test_booking_availability.py  test_booking_hold.py  test_booking_models.py  test_booking_seed.py  test_booking_timezone.py  test_catalog.py  test_documents.py  test_entitlements.py  test_finance.py  test_health.py  test_import_summary_contract.py  test_imports_dry_run.py  test_imports_sqlite_readonly.py  test_industry_templates.py  test_integrations.py  test_lead_automation_c2b1.py  test_lead_sources.py  test_marketing_historical_publish.py  test_marketing_migration.py  test_marketing_packs.py  test_marketing_preflight_approval.py  test_marketing_publish_destinations_api.py  test_marketing_publish_destinations_model.py  test_marketing_publishing_connections.py  test_marketing_publishing_connections_api.py  test_marketing_texts_media.py  test_marketing_topics.py  test_migration_0014_branches.py  test_migration_0016_publishing_connections.py  test_migration_0017_secret_binding.py  test_migration_0018_storage_profiles.py  test_migration_0019_process_overlay_e1a.py  (+27 more)
(+740 files in other folders)
